5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1596_2895.log
== TEST (2019-03-24 17:51:03) 
-- CODE:
input(quantidade)
input(valor unitario)
input(frete)
print(preco total)
var=input("Instrucoes:")
float()
int()
-- ERROR:
File "XXXX", line 2
    input(valor unitario)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:51:58) 
-- CODE:
input(quantidade)
input(valor)
input(frete)
print(preco total)
var=input("Instrucoes:")
float()
int()
-- ERROR:
File "XXXX", line 4
    print(preco total)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:11:12) 
-- CODE:
quantidade=int(input("Quantidade de jogos:"))
valor=float(input("Valorde cada jogo:"))
frete=float(input("Valor do frete:"))
total=quantidade*valor+frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:11:14) 
-- CODE:
quantidade=int(input("Quantidade de jogos:"))
valor=float(input("Valorde cada jogo:"))
frete=float(input("Valor do frete:"))
total=quantidade*valor+frete
print(total)
-- EXECUTION TIME:
0.19223
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
